Update Eclipse SimRel 2018-12